Migrate tests to JUnit5 (#46)